@@ -1,6 +1,6 @@
 /*
  * BlueALSA - log.c
- * Copyright (c) 2016-2023 Arkadiusz Bokowy
+ * Copyright (c) 2016-2024 Arkadiusz Bokowy
  *
  * This file is a part of bluez-alsa.
  *
@@ -9,7 +9,10 @@
  */
 
 #include "shared/log.h"
-/* IWYU pragma: no_include "config.h" */
+
+#if HAVE_CONFIG_H
+# include <config.h>
+#endif
 
 #include <pthread.h>
 #include <stdarg.h>
@@ -36,6 +39,8 @@
 static char *_ident = NULL;
 /* if true, system logging is enabled */
 static bool _syslog = false;
+/* minimum priority to be logged */
+static int _priority_limit = LOG_DEBUG;
 
 #if DEBUG_TIME
 
@@ -57,6 +62,10 @@ void log_open(const char *ident, bool syslog) {
 	if ((_syslog = syslog) == true)
 		openlog(ident, 0, LOG_USER);
 
+}
+
+void log_set_min_priority(int priority) {
+	_priority_limit = priority;
 }
 
 static const char *priority2str[] = {
@@ -122,6 +131,8 @@ static void vlog(int priority, const char *format, va_list ap) {
 }
 
 void log_message(int priority, const char *format, ...) {
+	if (priority > _priority_limit)
+		return;
 	va_list ap;
 	va_start(ap, format);
 	vlog(priority, format, ap);
