@@ -3,6 +3,7 @@ unreleased
 
 - optional support for BLE MIDI 1.0 profile as a GATT server
 - command line option to set real-time priority for IO threads
+- command line option to filter log messages based on severity
 - allow to select individual extended controls in ALSA plug-in
 - codec-specific delay adjustment with ALSA control and persistency
 - fix for SBC codec and audio scaling on big-endian platforms
